// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Select fullWidth 1`] = `
<select
  class="sc-bdvvaa dNULwi"
/>
`;

exports[`renders Select large 1`] = `
<select
  class="sc-bdvvaa SskPc"
/>
`;

exports[`renders Select small 1`] = `
<select
  class="sc-bdvvaa fhIuoJ"
/>
`;
